--- a/page-3.html
+++ b/page-3.html
@@ -115,10 +115,10 @@
     </div>
 </section>
 <!--  -->
-<section class="py-lg-4 text-center">
+<section class="bg-light py-lg-5 text-center some-benefits">
   <div class="container">
-      <h2 class="title-text mb-4 text-center">Here are some benefits of having a footprints daycare in your office</h2>
-     <div class="row row-cols-2 row-cols-md-3 g-3 justify-content-center">
+      <h2 class="title-text mb-lg-4 text-center">Here are some benefits of having a footprints daycare in your office</h2>
+     <div class="row row-cols-2 row-cols-md-3 g-lg-4 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
           <img src="assets/img-1.svg" class="icon-img mt-3 m-auto" alt="Increase Productivity" width="80px" height="80px">
@@ -164,7 +164,7 @@
 </section>
 <!--  -->
 <!--  -->
-<section class="py-lg-4 corporate-section">
+<section class="py-lg-5 corporate-section">
   <div class="container">
       <!--  -->
       <h3 class="title-text mb-4 text-center">Our Corporate Universe</h3>
@@ -247,11 +247,11 @@
 <section class="bg-light py-lg-5 text-center what-we">
   <div class="container">
       <h2 class="title-text mb-4 text-center">What we offer</h2>
-     <div class="row row-cols-2 row-cols-md-3 g-3 justify-content-center">
+     <div class="row row-cols-2 row-cols-md-3 g-lg-4 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/earning.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
-          <div class="card-body px-2">
+          <img src="assets/mobile-update.svg" class="icon-img mt-3 m-auto" alt="Instant Mobile Updates" width="80px" height="80px">
+          <div class="card-body px-3">
             <h3 class="card-title main-title">Instant Mobile Updates</h3>
             <p class="main-para">Get updates on your mobile of what, when and how much your child ate, slept & played.</p>
           </div>
@@ -259,8 +259,8 @@
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/salary.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
-          <div class="card-body px-2">
+          <img src="assets/cctv-live.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
+          <div class="card-body px-3">
             <h3 class="card-title main-title">Live CCTV Streaming</h3>
             <p class="main-para">Watching your child from anywhere anytime having fun in. </p>
           </div>
@@ -268,8 +268,8 @@
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/bag.svg" class="icon-img mt-3 m-auto" alt="Age Group" width="80px" height="80px">
-          <div class="card-body px-2">
+          <img src="assets/nutritious-food.svg" class="icon-img mt-3 m-auto" alt="Nutritious Food" width="80px" height="80px">
+          <div class="card-body px-3">
             <h3 class="card-title main-title">Nutritious Food, 0% Junk</h3>
             <p class="main-para">100% Nutrition! 0% Junk, exactly the food they need! and only the food they need!</p>
           </div>
@@ -277,17 +277,17 @@
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/money-back-guarantee.svg" class="icon-img mt-3 m-auto" alt="Live CCTV Streaming" width="80px" height="80px">
-          <div class="card-body px-2">
-            <h3 class="card-title main-title">Infrastructure Designed For Child Safety</h3>
+          <img src="assets/child-safety.svg" class="icon-img mt-3 m-auto" alt="Child Safety" width="80px" height="80px">
+          <div class="card-body px-3">
+            <h3 class="card-title main-title">Infrastructure Designed <br> For Child Safety</h3>
             <p class="main-para">Background checked all-female staff, Child safe flooring.</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/customer-service.svg" class="icon-img mt-3 m-auto" alt="Child Ratio" width="80px" height="80px">
-          <div class="card-body px-2">
+          <img src="assets/playground.svg" class="icon-img mt-3 m-auto" alt="playgrounds" width="80px" height="80px">
+          <div class="card-body px-3">
             <h3 class="card-title main-title">Safety-focused Infrastructure</h3>
             <p class="main-para">Our Classrooms and playgrounds are designed with safety in minds.</p>
           </div>
