--- a/page-3.html
+++ b/page-3.html
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="hero-block">
             <div class="hero-title">
-                <h1 class="masthead-heading mb-lg-2">Bring the best childcare to your workplace</h1>
+                <h1 class="masthead-heading mb-lg-2 mb-1">Bring the best childcare to your workplace</h1>
                 <p class="mb-0">Once a footprint daycare in your office, We provide everything, from setup to daily operations.</p>
             </div>
             <div class="hero-form">
@@ -115,10 +115,10 @@
     </div>
 </section>
 <!--  -->
-<section class="bg-light py-lg-5 text-center some-benefits">
+<section class="py-4 py-lg-5 text-center some-benefits">
   <div class="container">
       <h2 class="title-text mb-lg-4 text-center">Here are some benefits of having a footprints daycare in your office</h2>
-     <div class="row row-cols-2 row-cols-md-3 g-lg-4 justify-content-center">
+     <div class="row row-cols-2 row-cols-md-3 g-3 g-lg-4 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
           <img src="assets/img-1.svg" class="icon-img mt-3 m-auto" alt="Increase Productivity" width="80px" height="80px">
@@ -163,8 +163,56 @@
   </div>
 </section>
 <!--  -->
+<section class="bg-light py-4 py-lg-5 text-center solution-section">
+  <div class="container">
+      <h2 class="title-text mb-3 mb-lg-4 text-center">Our Solution For Corporates</h2>
+      <p class="text-center h3 mb-4 mb-lg-5 fw-bold">Benefits Of On Site Daycare</p>
+     <div class="row row-cols-2 row-cols-md-3 g-4 g-lg-4 justify-content-center">
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/retention.svg" class="icon-img mt-3 m-auto" alt="Retention of employees" width="80px" height="80px">
+          <div class="card-body px-3">
+            <h3 class="card-title main-title">Retention of employees.</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/employee-engagement.svg" class="icon-img mt-3 m-auto" alt="Improving employee engagement" width="80px" height="80px">
+          <div class="card-body px-3">
+            <h3 class="card-title main-title">Improving employee engagement & productivity.</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/diverse-organization.svg" class="icon-img mt-3 m-auto" alt="Building a gender diverse organization" width="80px" height="80px">
+          <div class="card-body px-3">
+            <h3 class="card-title main-title">Building a gender diverse organization.</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/recruiting-candidates.svg" class="icon-img mt-3 m-auto" alt="Recruiting Candidates" width="80px" height="80px">
+          <div class="card-body px-3">
+            <h3 class="card-title main-title">Helps in recruiting candidates.</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0 shadow h-100">
+          <img src="assets/talent.svg" class="icon-img mt-3 m-auto" alt="Building Employees" width="80px" height="80px">
+          <div class="card-body px-3">
+            <h3 class="card-title main-title">Building employees loyalty and attracting better talent.</h3>
+          </div>
+        </div>
+      </div>
+     </div>
+  </div>
+</section>
 <!--  -->
-<section class="py-lg-5 corporate-section">
+<section class="py-4 py-lg-5 corporate-section">
   <div class="container">
       <!--  -->
       <h3 class="title-text mb-4 text-center">Our Corporate Universe</h3>
@@ -244,10 +292,10 @@
   </div>
 </section>
 <!--  -->
-<section class="bg-light py-lg-5 text-center what-we">
+<section class="bg-light py-4 py-lg-5 text-center what-we">
   <div class="container">
       <h2 class="title-text mb-4 text-center">What we offer</h2>
-     <div class="row row-cols-2 row-cols-md-3 g-lg-4 justify-content-center">
+     <div class="row row-cols-2 row-cols-md-3 g-4 g-lg-4 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
           <img src="assets/mobile-update.svg" class="icon-img mt-3 m-auto" alt="Instant Mobile Updates" width="80px" height="80px">
@@ -297,10 +345,10 @@
   </div>
 </section>
 <!--  -->
-<section class="py-lg-5 highscope">
+<section class="py-4 py-lg-5 highscope">
     <div class="container">
         <div class="highscope-logo-title text-center">
-            <img src="assets/highscope.png" alt="highscope" width="420" height="100" class="img-fluid mb-lg-4">
+            <img src="assets/highscope.png" alt="highscope" width="420" height="100" class="img-fluid mb-4 mb-lg-4">
             <p>Based on 50 Years of research by US based HighScope Foundation engaged in curriculum development since 1962</p>
             <p>A child centric curriculum with activities right from birth to 5 years maximizing the opportunity for child growth & development</p>
             <h3 class="h5">Being used in over <span class="fw-bold text-dark">50,000</span> preschools in more than <span class="fw-bold text-dark">20 Countries</span> across the world like <span class="fw-bold text-dark">US, UK, EU, AU & China.</span></h3>
@@ -310,7 +358,7 @@
                 <h3>Active Learning Initiative <br>Key Developmental Indicators</h3>
             </div>
         </div>
-        <div class="row row-cols-1 row-cols-md-4 mb-3 highscope-list">
+        <div class="row row-cols-1 row-cols-md-4 mb-3 g-4 highscope-list">
             <div class="col">
               <div class="card mb-4 rounded-3 shadow-sm border-primary h-100">
                 <div class="card-header py-3 text-bg-primary border-primary">
@@ -375,10 +423,10 @@
 </section>
 
 <!--  -->
-<section class="bg-light py-lg-4 review-section">
+<section class="bg-light py-4 py-lg-5 review-section">
     <div class="container">
         <!--  -->
-        <h3 class="title-text mb-4 text-center">Reviews</h3>
+        <h3 class="title-text mb-0 mb-lg-4 text-center">Reviews</h3>
           <div class="row justify-content-center my-2">
             <div class="col-12">
                 <div class="tiny-slider arrow-round">
@@ -413,10 +461,10 @@
           </div>    
         <!--  -->
     </div>
-  </section>
-  <!--  -->
+</section>
 <!--  -->
-<section class="py-lg-5 text-center our-team">
+<!--  -->
+<section class="py-4 py-lg-5 text-center our-team">
     <div class="container">
         <h3 class="title-text mb-4 text-center">Our Team </h3>
         <!--  -->
@@ -463,7 +511,7 @@
 </section>
 <!--  -->
 <!--  -->
-<section class="bg-light py-lg-4 media-section">
+<section class="bg-light py-4 py-lg-4 media-section">
     <div class="container">
         <div class="row mb-3">
             <div class="col-md-12 text-center mx-auto">
@@ -497,7 +545,7 @@
 <!--  -->
 
 <!--  -->
-<section class="py-lg-4 text-center">
+<section class="py-4 py-lg-4 text-center">
 <div class="container">
     <h3 class="title-text mb-4 text-center">Awards</h3>
     <div class="row row-cols-2 row-cols-md-4 g-3">
