--- a/page-3.html
+++ b/page-3.html
@@ -56,7 +56,7 @@
 </header>  
 
 <!--  -->
-<section class="masthead hero-img-new">
+<section class="masthead hero-img">
     <div class="container">
         <div class="hero-block">
             <div class="hero-title">
