--- a/page-3.html
+++ b/page-3.html
@@ -117,7 +117,7 @@
 <!--  -->
 <section class="py-4 py-lg-5 text-center some-benefits">
   <div class="container">
-      <h2 class="title-text mb-lg-4 text-center">Here are some benefits of having a footprints daycare in your office</h2>
+      <h2 class="title-text mb-lg-4 mb-4 text-center">Here are some benefits of having a footprints daycare in your office</h2>
      <div class="row row-cols-2 row-cols-md-3 g-3 g-lg-4 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
@@ -165,8 +165,7 @@
 <!--  -->
 <section class="bg-light py-4 py-lg-5 text-center solution-section">
   <div class="container">
-      <h2 class="title-text mb-3 mb-lg-4 text-center">Our Solution For Corporates</h2>
-      <p class="text-center h3 mb-4 mb-lg-5 fw-bold">Benefits Of On Site Daycare</p>
+      <h2 class="title-text mb-3 mb-lg-4 text-center">Benefits Of On Site Daycare</h2>
      <div class="row row-cols-2 row-cols-md-3 g-4 g-lg-4 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
@@ -347,16 +346,11 @@
 <!--  -->
 <section class="py-4 py-lg-5 highscope">
     <div class="container">
-        <div class="highscope-logo-title text-center">
+        <div class="highscope-logo-title text-center mb-3 mb-lg-5">
             <img src="assets/highscope.png" alt="highscope" width="420" height="100" class="img-fluid mb-4 mb-lg-4">
             <p>Based on 50 Years of research by US based HighScope Foundation engaged in curriculum development since 1962</p>
             <p>A child centric curriculum with activities right from birth to 5 years maximizing the opportunity for child growth & development</p>
-            <h3 class="h5">Being used in over <span class="fw-bold text-dark">50,000</span> preschools in more than <span class="fw-bold text-dark">20 Countries</span> across the world like <span class="fw-bold text-dark">US, UK, EU, AU & China.</span></h3>
-        </div>
-        <div class="row highscope-title">
-            <div class="col-12">
-                <h3>Active Learning Initiative <br>Key Developmental Indicators</h3>
-            </div>
+            <h3 class="h5">Being used in over 50,000 preschools in more than 20 Countries across the world like US, UK, EU, AU & China.</h3>
         </div>
         <div class="row row-cols-1 row-cols-md-4 mb-3 g-4 highscope-list">
             <div class="col">
