--- a/page-3.html
+++ b/page-3.html
@@ -58,12 +58,13 @@
 <!--  -->
 <!-- Masthead Section -->
 <section class="hero-bg">
+  <div class="overlay-bg"></div>
   <!--  -->
     <picture>
       <!-- Image for small screens -->
-      <source media="(max-width: 576px)" srcset="assets/d-img.jpeg">
+      <source media="(max-width: 576px)" srcset="assets/desktop-img.jpeg">
       <!-- Image for medium screens -->
-      <source media="(max-width: 768px)" srcset="assets/d-img.jpeg">
+      <source media="(max-width: 768px)" srcset="assets/desktop-img.jpeg">
       <!-- Image for large screens -->
       <source media="(max-width: 1200px)" srcset="assets/desktop-img.jpeg">
       <!-- Default fallback image -->
@@ -73,14 +74,14 @@
       <!--  -->
         <div class="hero-block">
           <div class="hero-title">
-              <h1 class="masthead-heading mb-lg-2 mb-1 text-white">Bring the best childcare to your workplace</h1>
+              <h1 class="masthead-heading mb-lg-2 mb-3 text-white">Bring the best childcare to your workplace</h1>
               <p class="mb-0 text-white">Once a footprint daycare in your office, We provide everything, from setup to daily operations.</p>
           </div>
           <div class="hero-form">
               <div class="form-title">GET IN TOUCH</div>
               <p class="text-white">Please Fill This Form to Request a Call Back</p>
               <form action="" class="needs-validation" novalidate>
-                  <div class="row g-2">
+                  <div class="row g-3">
                       <!--  -->
                       <div class="col-md">
                           <div class="form-floating">
@@ -119,7 +120,7 @@
                       </div>
                       <!--  -->
                       <div class="d-grid gap-2 d-md-block">
-                          <button class="btn btn-lg btn-primary mt-lg-4 mt-sm-3 px-lg-5 px-sm-5" data-bs-toggle="modal" data-bs-target="#heroModal" type="submit">Submit</button>
+                          <button class="btn btn-lg btn-primary mt-lg-4 mt-sm-3 px-lg-5 px-sm-5" data-bs-toggle="modal" data-bs-target="#heroModal" type="submit">Get Started</button>
                       </div>
                   </div>
               </form>
