--- a/page-3.html
+++ b/page-3.html
@@ -130,6 +130,16 @@
     </div>
 </section>
 <!--  -->
+<!--  -->
+<section class="bg-light cta-block py-4">
+  <div class="container">
+    <div class="d-flex justify-content-center gap-2">
+     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
+    </div>
+  </div>
+</section>
+<!--  -->
+<!--  -->
 <section class="py-4 py-lg-5 text-center some-benefits">
   <div class="container">
       <h2 class="title-text mb-lg-4 mb-4 text-center">Here are some benefits of having a footprints daycare in your office</h2>
@@ -178,6 +188,15 @@
   </div>
 </section>
 <!--  -->
+<!--  -->
+<section class="cta-block py-4">
+  <div class="container">
+    <div class="d-flex justify-content-center gap-2">
+     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
+    </div>
+  </div>
+</section>
+<!--  -->
 <section class="bg-light py-4 py-lg-5 text-center solution-section">
   <div class="container">
       <h2 class="title-text mb-3 mb-lg-4 text-center">Benefits Of On Site Daycare</h2>
@@ -223,6 +242,14 @@
         </div>
       </div>
      </div>
+  </div>
+</section>
+<!--  -->
+<section class="cta-block py-4">
+  <div class="container">
+    <div class="d-flex justify-content-center gap-2">
+     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
+    </div>
   </div>
 </section>
 <!--  -->
@@ -356,6 +383,15 @@
         </div>
       </div>
      </div>
+  </div>
+</section>
+<!--  -->
+<!--  -->
+<section class="cta-block py-4">
+  <div class="container">
+    <div class="d-flex justify-content-center gap-2">
+     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
+    </div>
   </div>
 </section>
 <!--  -->
@@ -520,7 +556,16 @@
 </section>
 <!--  -->
 <!--  -->
-<section class="bg-light py-4 py-lg-4 media-section">
+<section class="bg-light cta-block py-4">
+  <div class="container">
+    <div class="d-flex justify-content-center gap-2">
+     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
+    </div>
+  </div>
+</section>
+<!--  -->
+<!--  -->
+<section class="py-4 py-lg-4 media-section">
     <div class="container">
         <div class="row mb-3">
             <div class="col-md-12 text-center mx-auto">
@@ -552,7 +597,15 @@
     </div>
 </section>
 <!--  -->
-
+<!--  -->
+<section class="bg-light cta-block py-4">
+  <div class="container">
+    <div class="d-flex justify-content-center gap-2">
+     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
+    </div>
+  </div>
+</section>
+<!--  -->
 <!--  -->
 <section class="py-4 py-lg-4 text-center">
 <div class="container">
