--- a/page-3.html
+++ b/page-3.html
@@ -500,6 +500,14 @@
 </section>
 <!--  -->
 <!--  -->
+<section class="cta-block py-4">
+  <div class="container">
+    <div class="d-flex justify-content-center gap-2">
+     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
+    </div>
+  </div>
+</section>
+<!--  -->
 <section class="py-4 py-lg-5 text-center our-team">
     <div class="container">
         <h3 class="title-text mb-4 text-center">Our Team </h3>
