--- a/page-3.html
+++ b/page-3.html
@@ -459,6 +459,16 @@
 </section>
 
 <!--  -->
+<section class="cta-block pb-4">
+  <div class="container">
+    <div class="d-flex justify-content-center gap-2">
+     <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
+    </div>
+  </div>
+</section>
+<!--  -->
+
+<!--  -->
 <section class="bg-light py-4 py-lg-5 review-section">
     <div class="container">
         <!--  -->
