--- a/page-3.html
+++ b/page-3.html
@@ -236,7 +236,7 @@
   </div>
 </section>
 <!--  -->
-<section class="cta-block py-4">
+<section class="bg-light cta-block py-4">
   <div class="container">
     <div class="d-flex justify-content-center gap-2">
      <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
@@ -378,7 +378,7 @@
 </section>
 <!--  -->
 <!--  -->
-<section class="cta-block py-4">
+<section class="bg-light cta-block py-4">
   <div class="container">
     <div class="d-flex justify-content-center gap-2">
      <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
@@ -510,7 +510,7 @@
 </section>
 <!--  -->
 <!--  -->
-<section class="cta-block py-4">
+<section class="bg-light cta-block pb-4">
   <div class="container">
     <div class="d-flex justify-content-center gap-2">
      <a class="btn btn-primary fs-5 py-2 px-5 mx-3 rounded-pill text-white fw-bold" href="#fill-f">Get Started</a> 
