--- a/page-3.html
+++ b/page-3.html
@@ -51,6 +51,7 @@
                 <img src="assets/Footprints-Logo.svg" alt="footprint" width="250px" height="40px">
                 for Business
             </a>
+            <p>Daycare Solutions For Businesses</p>
         </div>
     </nav>
 </header>  
@@ -75,11 +76,9 @@
         <div class="hero-block">
           <div class="hero-title">
               <h1 class="masthead-heading mb-lg-2 mb-3 text-white">Bring the best childcare to your workplace</h1>
-              <p class="mb-0 text-white">Once a footprint daycare in your office, We provide everything, from setup to daily operations.</p>
           </div>
           <div class="hero-form">
               <div class="form-title">GET IN TOUCH</div>
-              <p class="text-white">Please Fill This Form to Request a Call Back</p>
               <form action="" class="needs-validation" novalidate>
                   <div class="row g-3">
                       <!--  -->
@@ -98,7 +97,7 @@
                       <div class="col-md">
                           <div class="form-floating">
                               <input type="email" class="form-control" id="hero-email" placeholder="name@domain.com" required>
-                              <label for="hero-email">Email address</label>
+                              <label for="hero-email">Official Email address</label>
                               <!--  -->
                               <div class="invalid-tooltip">
                                   Please Enter Correct Email ID
@@ -119,8 +118,32 @@
                           </div>
                       </div>
                       <!--  -->
+                      <div class="col-md">
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="hero-phone" placeholder="Company Name" required>
+                            <label for="hero-phone">Company Name</label>
+                            <!--  -->
+                            <div class="invalid-tooltip">
+                                Please Enter Correct Company Name
+                            </div>
+                            <!--  -->
+                        </div>
+                    </div>
+                    <!--  -->
+                    <div class="col-md">
+                      <div class="form-floating">
+                        <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                          <option selected>Solution Interested</option>
+                          <option value="1">Onsite</option>
+                          <option value="2">Nearsite</option>
+                          <option value="3">Don't Know</option>
+                        </select>
+                        <label for="floatingSelect">Works with selects</label>
+                      </div>
+                  </div>
+                      <!--  -->
                       <div class="d-grid gap-2 d-md-block">
-                          <button class="btn btn-lg btn-primary mt-lg-4 mt-sm-3 px-lg-5 px-sm-5" data-bs-toggle="modal" data-bs-target="#heroModal" type="submit">Get Started</button>
+                          <button class="btn btn-lg btn-primary mt-lg-4 mt-sm-3 px-lg-5 px-sm-5" data-bs-toggle="modal" data-bs-target="#heroModal" type="submit">Request A Call</button>
                       </div>
                   </div>
               </form>
@@ -133,13 +156,13 @@
 <!--  -->
 <section class="py-4 py-lg-5 text-center some-benefits">
   <div class="container">
-      <h2 class="title-text mb-lg-4 mb-4 text-center">Here are some benefits of having a footprints daycare in your office</h2>
+      <h2 class="title-text mb-lg-4 mb-4 text-center">Benefits of having a Footprints on-site daycare</h2>
      <div class="row row-cols-2 row-cols-md-3 g-3 g-lg-4 justify-content-center">
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/img-1.svg" class="icon-img mt-3 m-auto" alt="Increase Productivity" width="80px" height="80px">
+          <img src="assets/img-3.svg" class="icon-img mt-3 m-auto" alt="Attract top talent" width="80px" height="80px">
           <div class="card-body px-2">
-            <h3 class="card-title main-title">Increase Productivity</h3>
+            <h3 class="card-title main-title">Attract top talent</h3>
           </div>
         </div>
       </div>
@@ -153,17 +176,9 @@
       </div>
       <div class="col">
         <div class="card border-0 shadow h-100">
-          <img src="assets/img-3.svg" class="icon-img mt-3 m-auto" alt="Attract top talent" width="80px" height="80px">
-          <div class="card-body px-2">
-            <h3 class="card-title main-title">Attract top talent</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card border-0 shadow h-100">
-          <img src="assets/boost-moral.svg" class="icon-img mt-3 m-auto" alt="Boost Morale" width="80px" height="80px">
-          <div class="card-body px-2">
-            <h3 class="card-title main-title">Boost Morale</h3>
+          <img src="assets/diverse-organization.svg" class="icon-img mt-3 m-auto" alt="Building a gender diverse organization" width="80px" height="80px">
+          <div class="card-body px-3">
+            <h3 class="card-title main-title">Building a gender diverse organization.</h3>
           </div>
         </div>
       </div>
@@ -205,14 +220,6 @@
           <img src="assets/employee-engagement.svg" class="icon-img mt-3 m-auto" alt="Improving employee engagement" width="80px" height="80px">
           <div class="card-body px-3">
             <h3 class="card-title main-title">Improving employee engagement & productivity.</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card border-0 shadow h-100">
-          <img src="assets/diverse-organization.svg" class="icon-img mt-3 m-auto" alt="Building a gender diverse organization" width="80px" height="80px">
-          <div class="card-body px-3">
-            <h3 class="card-title main-title">Building a gender diverse organization.</h3>
           </div>
         </div>
       </div>
